--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -43,15 +45,24 @@
             <div id="feed">
 
             </div>
-            <!-- <div class="card border-success mb-3">
+            <div class="card border-success mb-3">
                 <div class="card-header bg-transparent border-success">
                     <img src="https://storage.pixteller.com/designs/designs-images/2016-11-19/02/thumbs/img_page_1_58305b35ebf5e.png"/>
                 <div>UserName</div>
                 <div>time post</div>
                 </div>
                 <div class="card-body text-success">
-                  <h5 class="card-title">Success card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">I'm ok.</p>       
+                  <div class="card border-success mb-3">
+                    <div class="card-header bg-transparent border-success">
+                        <img src="https://storage.pixteller.com/designs/designs-images/2016-11-19/02/thumbs/img_page_1_58305b35ebf5e.png"/>
+                    <div>UserName</div>
+                    <div>time post</div>
+                    </div>
+                    <div class="card-body text-success">
+                        <p class="card-text">How you doin?.</p>
+                        </div>
+                   </div> 
                 </div>
                 <div class="card-footer bg-transparent border-success">
                 <i class="fas fa-comment"></i>
@@ -60,7 +71,7 @@
                 <i class="far fa-edit"></i>
                 <i class="fas fa-trash-alt"></i>
                 </div>
-              </div> -->
+              </div>
           </div>
           <div class="col-3 rightPanel"></div>
         </div>
@@ -82,6 +93,7 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </body>
 </html>
