--- a/index.html
+++ b/index.html
@@ -111,27 +111,53 @@
           </div>
           <!-- feed section is below -->
           <div id="feed"></div>
+          <!-- BELOW IS HOW RETWEET LOOK LIKE -->
+          <div
+            class="card border-left-0 border-right-0 border-top-0 border-secondary mb-3 tweet"
+          >
+            <div class="card-header bg-transparent border-0 tweetHeader">
+              <div class="profilePic"></div>
 
-          <div class="card border-success mb-3 retweet">
-            <div class="card-header bg-transparent border-success">
-              <img src="images/profile.png" />
-              <div>UserName</div>
-              <div>time post</div>
+              <div class="username">UserName</div>
+              <div class="timePost">. &nbsp;time post</div>
             </div>
-            <div class="card-body text-success">
-              <p class="card-text">I'm ok.</p>
-              <div class="card border-success mb-3">
-                <div class="card-header bg-transparent border-success">
-                  <img src="images/profile.png" />
-                  <div>UserName</div>
-                  <div>time post</div>
+            <div class="card-body text-success tweetContent">
+              <p class="text-white">This is how retweet look like</p>
+              <div class="card border-secondary rounded mb-3 tweet">
+                <div
+                  class="card-header bg-transparent border-0 text-white tweetHeader"
+                >
+                  <div class="profilePic"></div>
+                  <div class="username">UserName</div>
+                  <div class="timePost">. &nbsp;time post</div>
                 </div>
-                <div class="card-body text-success">
-                  <p class="card-text">How you doin?.</p>
+                <div class="card-body text-white">
+                  <p class="card-text">How you doin?</p>
                 </div>
               </div>
             </div>
-            <div class="card-footer bg-transparent border-success">
+            <div class="card-footer bg-transparent border-0 tweetFunction">
+              <i class="fas fa-comment"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="far fa-heart"></i>
+              <i class="far fa-edit"></i>
+              <i class="fas fa-trash-alt"></i>
+            </div>
+          </div>
+          <!-- below is how twet look like -->
+          <div
+            class="card border-left-0 border-right-0 border-top-0 border-secondary mb-3 tweet"
+          >
+            <div class="card-header bg-transparent border-0 tweetHeader">
+              <div class="profilePic"></div>
+
+              <div class="username">UserName</div>
+              <div class="timePost">. &nbsp;time post</div>
+            </div>
+            <div class="card-body text-success tweetContent">
+              <p class="text-white">This is how tweet look like</p>
+            </div>
+            <div class="card-footer bg-transparent border-0 tweetFunction">
               <i class="fas fa-comment"></i>
               <i class="fas fa-retweet"></i>
               <i class="far fa-heart"></i>
