add trending list

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <i class="fab fa-twitter fa-2x" color="white"></i>
           </div>
           <div class="leftPanelContent">
-            <p class="leftInfo">
+            <p class="leftInfo" style="color: rgba(29, 161, 242, 1)">
               <i class="fas fa-home fa-lg"></i> &nbsp; Home
             </p>
             <p class="leftInfo">
@@ -249,6 +249,55 @@
                 <span style="color: rgba(134, 151, 164, 1)">@kamejoko </span>
               </div>
               <button class="followButton" type="button">Follow</button>
+            </div>
+            <div class="followFooter">Show more</div>
+          </div>
+          <!-- Trending list below -->
+          <div class="trendingList">
+            <div class="followHeader">Trends for you</div>
+            <div class="trendingSubject">
+              <div class="trendingHead">
+                <div>Music . Trending</div>
+                <i class="fas fa-angle-down fa-lg"></i>
+              </div>
+              <p class="trendingContent">#MartinGarix</p>
+              <div class="trendingHead">410K Tweets</div>
+            </div>
+            <!-- more trending subject -->
+            <div class="trendingSubject">
+              <div class="trendingHead">
+                <div>Music . Trending</div>
+                <i class="fas fa-angle-down fa-lg"></i>
+              </div>
+              <p class="trendingContent">#DenVau</p>
+              <div class="trendingHead">10.1K Tweets</div>
+            </div>
+            <!-- more trending subject -->
+            <div class="trendingSubject">
+              <div class="trendingHead">
+                <div>TVShow . Trending</div>
+                <i class="fas fa-angle-down fa-lg"></i>
+              </div>
+              <p class="trendingContent">#Friends</p>
+              <div class="trendingHead">280K Tweets</div>
+            </div>
+            <!-- more trending subject -->
+            <div class="trendingSubject">
+              <div class="trendingHead">
+                <div>Social . Trending</div>
+                <i class="fas fa-angle-down fa-lg"></i>
+              </div>
+              <p class="trendingContent">#TrungQuoc</p>
+              <div class="trendingHead">540K Tweets</div>
+            </div>
+            <!-- more trending subject -->
+            <div class="trendingSubject">
+              <div class="trendingHead">
+                <div>Technology . Trending</div>
+                <i class="fas fa-angle-down fa-lg"></i>
+              </div>
+              <p class="trendingContent">#Technology</p>
+              <div class="trendingHead">3.1M Tweets</div>
             </div>
             <div class="followFooter">Show more</div>
           </div>
